# DeepZ-Photometric-Redshift-Estimator

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
config/: baseline_config.yaml  default.yaml  model1_config.yaml  model2_config.yaml  model3_config.yaml
notebooks/: 01_data_exploration.ipynb  02_preprocess.ipynb  03_train_evaluate.ipynb  04_inference.ipynb  05_demo.ipynb
outputs/: baseline_results.json  model1_results.json  model2_results.json  model3_results.json
pzest/: config.py  preprocessing.py  utils.py
pzest/dataset/: dataset.py  splits.py
pzest/evaluation/: calibrate.py  inference.py  metrics.py  test.py
pzest/models/: deepz.py  inception.py  magnitude.py
pzest/pipelines/: evaluate_pipeline.py  train_pipeline.py
pzest/training/: loss.py  sampling.py  trainer.py  validation.py
tests/: test_dataset.py  test_loss.py  test_metrics.py  test_splits.py
